--- a/section-04-research-and-development/titanic-assignment/03-titanic-survival-pipeline-assignment.ipynb
+++ b/section-04-research-and-development/titanic-assignment/03-titanic-survival-pipeline-assignment.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,15 +50,25 @@
     "# Respect to notebook 02-Predicting-Survival-Titanic-Solution\n",
     "\n",
     "# pipeline\n",
-    "\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "# for the preprocessors\n",
-    "\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "\n",
     "# for imputation\n",
+    "from feature_engine.imputation import (\n",
+    "    CategoricalImputer,\n",
+    "    AddMissingIndicator,\n",
+    "    MeanMedianImputer)\n",
     "\n",
+    "# for encoding categorical variables\n",
+    "from feature_engine.encoding import (\n",
+    "    RareLabelEncoder,\n",
+    "    OneHotEncoder\n",
+    ")\n",
     "\n",
-    "# for encoding categorical variables\n"
+    "# for feature scaling\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
@@ -70,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -201,15 +211,15 @@
        "</div>"
       ],
       "text/plain": [
-       "   pclass  survived                                             name     sex  \\\n",
-       "0       1         1                    Allen, Miss. Elisabeth Walton  female   \n",
+       "   pclass  survived                                             name     sex   \n",
+       "0       1         1                    Allen, Miss. Elisabeth Walton  female  \\\n",
        "1       1         1                   Allison, Master. Hudson Trevor    male   \n",
        "2       1         0                     Allison, Miss. Helen Loraine  female   \n",
        "3       1         0             Allison, Mr. Hudson Joshua Creighton    male   \n",
        "4       1         0  Allison, Mrs. Hudson J C (Bessie Waldo Daniels)  female   \n",
        "\n",
-       "      age  sibsp  parch  ticket      fare    cabin embarked boat body  \\\n",
-       "0      29      0      0   24160  211.3375       B5        S    2    ?   \n",
+       "      age  sibsp  parch  ticket      fare    cabin embarked boat body   \n",
+       "0      29      0      0   24160  211.3375       B5        S    2    ?  \\\n",
        "1  0.9167      1      2  113781    151.55  C22 C26        S   11    ?   \n",
        "2       2      1      2  113781    151.55  C22 C26        S    ?    ?   \n",
        "3      30      1      2  113781    151.55  C22 C26        S    ?  135   \n",
@@ -223,7 +233,7 @@
        "4  Montreal, PQ / Chesterville, ON  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -411,8 +421,8 @@
        "</div>"
       ],
       "text/plain": [
-       "   pclass  survived     sex      age  sibsp  parch      fare cabin embarked  \\\n",
-       "0       1         1  female  29.0000      0      0  211.3375    B5        S   \n",
+       "   pclass  survived     sex      age  sibsp  parch      fare cabin embarked   \n",
+       "0       1         1  female  29.0000      0      0  211.3375    B5        S  \\\n",
        "1       1         1    male   0.9167      1      2  151.5500   C22        S   \n",
        "2       1         0  female   2.0000      1      2  151.5500   C22        S   \n",
        "3       1         0    male  30.0000      1      2  151.5500   C22        S   \n",
@@ -426,7 +436,7 @@
        "4     Mrs  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,11 +478,11 @@
    "source": [
     "# list of variables to be used in the pipeline's transformers\n",
     "\n",
-    "NUMERICAL_VARIABLES = \n",
+    "NUMERICAL_VARIABLES = ['age', 'fare']\n",
     "\n",
-    "CATEGORICAL_VARIABLES = \n",
+    "CATEGORICAL_VARIABLES = ['sex', 'cabin', 'embarked', 'title']\n",
     "\n",
-    "CABIN = "
+    "CABIN = ['cabin']"
    ]
   },
   {
@@ -519,23 +529,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ExtractLetterTransformer():\n",
+    "class ExtractLetterTransformer(BaseEstimator, TransformerMixin):\n",
     "    # Extract fist letter of variable\n",
     "\n",
-    "    def __init__():\n",
+    "    def __init__(self, variables):\n",
     "        \n",
-    "\n",
-    "\n",
-    "    def fit():\n",
-    "\n",
+    "        if not isinstance(variables, list):\n",
+    "            raise ValueError('variables should be a list')\n",
     "        \n",
+    "        self.variables = variables\n",
     "\n",
-    "    def transform():\n",
-    "\n"
+    "    def fit(self, X, y=None):\n",
+    "        # we need this step to fit the sklearn pipeline\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, X):\n",
+    "        # so that we can use the transform method\n",
+    "        X = X.copy()\n",
+    "        for feature in self.variables:\n",
+    "            X[feature] = X[feature].str[0]\n",
+    "\n",
+    "        return X\n"
    ]
   },
   {
@@ -556,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,73 +583,53 @@
     "\n",
     "    # ===== IMPUTATION =====\n",
     "    # impute categorical variables with string 'missing'\n",
-    "    ('categorical_imputation', ),\n",
+    "    ('categorical_imputation', CategoricalImputer(\n",
+    "        imputation_method='missing', variables=CATEGORICAL_VARIABLES)),\n",
     "\n",
     "    # add missing indicator to numerical variables\n",
-    "    ('missing_indicator', ),\n",
+    "    ('missing_indicator', AddMissingIndicator(variables=NUMERICAL_VARIABLES)),\n",
     "\n",
     "    # impute numerical variables with the median\n",
-    "    ('median_imputation', ),\n",
+    "    ('median_imputation', MeanMedianImputer(\n",
+    "        imputation_method='median', variables=NUMERICAL_VARIABLES\n",
+    "    )),\n",
     "\n",
     "\n",
     "    # Extract first letter from cabin\n",
-    "    ('extract_letter', ),\n",
+    "    ('extract_letter', ExtractLetterTransformer(variables=CABIN)),\n",
     "\n",
     "\n",
     "    # == CATEGORICAL ENCODING ======\n",
     "    # remove categories present in less than 5% of the observations (0.05)\n",
     "    # group them in one category called 'Rare'\n",
-    "    ('rare_label_encoder', ),\n",
+    "    ('rare_label_encoder', RareLabelEncoder(\n",
+    "        tol=0.05, n_categories=1, variables=CATEGORICAL_VARIABLES\n",
+    "    )),\n",
+    "   \n",
     "\n",
     "\n",
     "    # encode categorical variables using one hot encoding into k-1 variables\n",
-    "    ('categorical_encoder', ),\n",
+    "    ('categorical_encoder', \n",
+    "     OneHotEncoder(\n",
+    "         drop_last=True, variables=CATEGORICAL_VARIABLES)),\n",
     "\n",
     "    # scale using standardization\n",
-    "    ('scaler', ),\n",
+    "    ('scaler', StandardScaler()),\n",
     "\n",
     "    # logistic regression (use C=0.0005 and random_state=0)\n",
-    "    ('Logit', ),\n",
+    "    ('Logit', LogisticRegression(C=0.0005, random_state=0)),\n",
     "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(steps=[('categorical_imputation',\n",
-       "                 CategoricalImputer(variables=['sex', 'cabin', 'embarked',\n",
-       "                                               'title'])),\n",
-       "                ('missing_indicator',\n",
-       "                 AddMissingIndicator(variables=['age', 'fare'])),\n",
-       "                ('median_imputation',\n",
-       "                 MeanMedianImputer(variables=['age', 'fare'])),\n",
-       "                ('extract_letter',\n",
-       "                 ExtractLetterTransformer(variables=['cabin'])),\n",
-       "                ('rare_label_encoder',\n",
-       "                 RareLabelEncoder(n_categories=1,\n",
-       "                                  variables=['sex', 'cabin', 'embarked',\n",
-       "                                             'title'])),\n",
-       "                ('categorical_encoder',\n",
-       "                 OneHotEncoder(drop_last=True,\n",
-       "                               variables=['sex', 'cabin', 'embarked',\n",
-       "                                          'title'])),\n",
-       "                ('scaler', StandardScaler()),\n",
-       "                ('Logit', LogisticRegression(C=0.0005, random_state=0))])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# train the pipeline\n",
-    "\n"
+    "\n",
+    "survived_pipe = titanic_pipe.fit(X_train, y_train)"
    ]
   },
   {
@@ -649,26 +647,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train roc-auc: 0.8450386398763523\n",
-      "train accuracy: 0.7220630372492837\n",
-      "\n",
-      "test roc-auc: 0.8354629629629629\n",
-      "test accuracy: 0.7137404580152672\n",
-      "\n"
+      "train roc-auc: 0.6391132148377126\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Found input variables with inconsistent numbers of samples: [1047, 2]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\code\\deploying-machine-learning-models\\section-04-research-and-development\\titanic-assignment\\03-titanic-survival-pipeline-assignment.ipynb Cell 21\u001b[0m line \u001b[0;36m7\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/code/deploying-machine-learning-models/section-04-research-and-development/titanic-assignment/03-titanic-survival-pipeline-assignment.ipynb#X26sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# determine mse and rmse\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/code/deploying-machine-learning-models/section-04-research-and-development/titanic-assignment/03-titanic-survival-pipeline-assignment.ipynb#X26sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mtrain roc-auc: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(roc_auc_score(y_train, pred)))\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/code/deploying-machine-learning-models/section-04-research-and-development/titanic-assignment/03-titanic-survival-pipeline-assignment.ipynb#X26sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mtrain accuracy: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mformat(accuracy_score(y_train, class_)))\n\u001b[0;32m      <a href='vscode-notebook-cell:/e%3A/code/deploying-machine-learning-models/section-04-research-and-development/titanic-assignment/03-titanic-survival-pipeline-assignment.ipynb#X26sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39mprint\u001b[39m()\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/code/deploying-machine-learning-models/section-04-research-and-development/titanic-assignment/03-titanic-survival-pipeline-assignment.ipynb#X26sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# make predictions for test set\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\197796\\Anaconda3\\envs\\AISeed\\lib\\site-packages\\sklearn\\utils\\_param_validation.py:192\u001b[0m, in \u001b[0;36mvalidate_params.<locals>.decorator.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    187\u001b[0m validate_parameter_constraints(\n\u001b[0;32m    188\u001b[0m     parameter_constraints, params, caller_name\u001b[39m=\u001b[39mfunc\u001b[39m.\u001b[39m\u001b[39m__qualname__\u001b[39m\n\u001b[0;32m    189\u001b[0m )\n\u001b[0;32m    191\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m--> 192\u001b[0m     \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    193\u001b[0m \u001b[39mexcept\u001b[39;00m InvalidParameterError \u001b[39mas\u001b[39;00m e:\n\u001b[0;32m    194\u001b[0m     \u001b[39m# When the function is just a wrapper around an estimator, we allow\u001b[39;00m\n\u001b[0;32m    195\u001b[0m     \u001b[39m# the function to delegate validation to the estimator, but we replace\u001b[39;00m\n\u001b[0;32m    196\u001b[0m     \u001b[39m# the name of the estimator by the name of the function in the error\u001b[39;00m\n\u001b[0;32m    197\u001b[0m     \u001b[39m# message to avoid confusion.\u001b[39;00m\n\u001b[0;32m    198\u001b[0m     msg \u001b[39m=\u001b[39m re\u001b[39m.\u001b[39msub(\n\u001b[0;32m    199\u001b[0m         \u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mparameter of \u001b[39m\u001b[39m\\\u001b[39m\u001b[39mw+ must be\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    200\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mparameter of \u001b[39m\u001b[39m{\u001b[39;00mfunc\u001b[39m.\u001b[39m\u001b[39m__qualname__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m must be\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    201\u001b[0m         \u001b[39mstr\u001b[39m(e),\n\u001b[0;32m    202\u001b[0m     )\n",
+      "File \u001b[1;32mc:\\Users\\197796\\Anaconda3\\envs\\AISeed\\lib\\site-packages\\sklearn\\metrics\\_classification.py:221\u001b[0m, in \u001b[0;36maccuracy_score\u001b[1;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[0;32m    155\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Accuracy classification score.\u001b[39;00m\n\u001b[0;32m    156\u001b[0m \n\u001b[0;32m    157\u001b[0m \u001b[39mIn multilabel classification, this function computes subset accuracy:\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    217\u001b[0m \u001b[39m0.5\u001b[39;00m\n\u001b[0;32m    218\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m    220\u001b[0m \u001b[39m# Compute accuracy for each possible representation\u001b[39;00m\n\u001b[1;32m--> 221\u001b[0m y_type, y_true, y_pred \u001b[39m=\u001b[39m _check_targets(y_true, y_pred)\n\u001b[0;32m    222\u001b[0m check_consistent_length(y_true, y_pred, sample_weight)\n\u001b[0;32m    223\u001b[0m \u001b[39mif\u001b[39;00m y_type\u001b[39m.\u001b[39mstartswith(\u001b[39m\"\u001b[39m\u001b[39mmultilabel\u001b[39m\u001b[39m\"\u001b[39m):\n",
+      "File \u001b[1;32mc:\\Users\\197796\\Anaconda3\\envs\\AISeed\\lib\\site-packages\\sklearn\\metrics\\_classification.py:86\u001b[0m, in \u001b[0;36m_check_targets\u001b[1;34m(y_true, y_pred)\u001b[0m\n\u001b[0;32m     59\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_check_targets\u001b[39m(y_true, y_pred):\n\u001b[0;32m     60\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Check that y_true and y_pred belong to the same classification task.\u001b[39;00m\n\u001b[0;32m     61\u001b[0m \n\u001b[0;32m     62\u001b[0m \u001b[39m    This converts multiclass or binary types to a common shape, and raises a\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     84\u001b[0m \u001b[39m    y_pred : array or indicator matrix\u001b[39;00m\n\u001b[0;32m     85\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 86\u001b[0m     check_consistent_length(y_true, y_pred)\n\u001b[0;32m     87\u001b[0m     type_true \u001b[39m=\u001b[39m type_of_target(y_true, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my_true\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     88\u001b[0m     type_pred \u001b[39m=\u001b[39m type_of_target(y_pred, input_name\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39my_pred\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\197796\\Anaconda3\\envs\\AISeed\\lib\\site-packages\\sklearn\\utils\\validation.py:397\u001b[0m, in \u001b[0;36mcheck_consistent_length\u001b[1;34m(*arrays)\u001b[0m\n\u001b[0;32m    395\u001b[0m uniques \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39munique(lengths)\n\u001b[0;32m    396\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(uniques) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m--> 397\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    398\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mFound input variables with inconsistent numbers of samples: \u001b[39m\u001b[39m%r\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[0;32m    399\u001b[0m         \u001b[39m%\u001b[39m [\u001b[39mint\u001b[39m(l) \u001b[39mfor\u001b[39;00m l \u001b[39min\u001b[39;00m lengths]\n\u001b[0;32m    400\u001b[0m     )\n",
+      "\u001b[1;31mValueError\u001b[0m: Found input variables with inconsistent numbers of samples: [1047, 2]"
      ]
     }
    ],
    "source": [
     "# make predictions for train set\n",
-    "class_ = \n",
-    "pred = \n",
+    "class_ = survived_pipe.predict(X_train)\n",
+    "pred = survived_pipe.predict_proba(X_train)[:, 1]\n",
     "\n",
     "# determine mse and rmse\n",
     "print('train roc-auc: {}'.format(roc_auc_score(y_train, pred)))\n",
@@ -676,8 +684,8 @@
     "print()\n",
     "\n",
     "# make predictions for test set\n",
-    "class_ = \n",
-    "pred = \n",
+    "class_ = survived_pipe.predict(X_test)\n",
+    "pred = survived_pipe.predict_proba(X_test)[:, 1]\n",
     "\n",
     "# determine mse and rmse\n",
     "print('test roc-auc: {}'.format(roc_auc_score(y_test, pred)))\n",
@@ -697,9 +705,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "feml",
+   "display_name": "AISeed",
    "language": "python",
-   "name": "feml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -711,7 +719,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.16"
   },
   "toc": {
    "base_numbering": 1,
